src/test/ui/regions/regions-infer-borrow-scope-too-big.nll.stderr
error[E0515]: cannot return value referencing local data `*p`
  --> $DIR/regions-infer-borrow-scope-too-big.rs:23:12
   |
LL |     let xc = x_coord(&*p); //~ ERROR `*p` does not live long enough
   |                      --- `*p` is borrowed here
LL |     assert_eq!(*xc, 3);
LL |     return xc;
   |            ^^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
